# fastapi-task-manager

./: .gitignore  =2.11.0  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  task_app_DB.dump
app/: __init__.py  database.py  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 02ce18bb1cb2_.py
app/core/: config.py  init_db.py  security.py
app/crud/: crud_login.py  crud_tasks.py  crud_users.py
app/routers/: login.py  tasks.py  users.py
app/schemas/: task_schemas.py  user_schemas.py
